--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">TEAM RAFTAAR</a>
+            <a><a class="navbar-brand" href="index.html">
+                    <img src="assets/img/file.jpg" alt="Team Raftaar Logo" height="30">
+                </a></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -57,7 +59,7 @@
                 <a href="about.html" class="btn btn-outline-dark">Meet The Team</a>
             </div>
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/500x350" class="img-fluid rounded" alt="Team Raftaar">
+                <img src="assets/img/car 1.jpeg" class="img-fluid rounded" alt="Team Raftaar">
             </div>
         </div>
 
